[project]
name = "warehouse-robot-dispatch"
version = "0.1.0"
description = "Warehouse Robot Dispatch OpenEnv environment"
authors = [{ name="CGI", email="your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "gymnasium",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
